--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>motorialab</title>
+    <title>MotoriaLab</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.png">
@@ -74,7 +74,7 @@
             <!-- TITLE PARAGRAPH -->
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 lj-title-paragraph" data-scroll-reveal="wait 1.25s, then enter bottom and move 40px over 1s">
-                    <p class="lj-text-center">info@motorialab.com :: 0461 314638</p>
+                    <p class="lj-text-center">motorialab srl, via alla Cascata 56/C, Trento 38123 TN :: info@motorialab.com :: 0461 314648 </p>
                 </div>
             </div>
             <!-- /TITLE PARAGRAPH -->
